--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Xola">
+	<meta name="description" content="Happy Birthday levy">
 	<meta name="robots" content="index, follow" />
-	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
+	<!--<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> -->
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
@@ -21,11 +21,11 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../birthday-master/stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="../birthday-master/loading.css">
+	<link rel="stylesheet" type="text/css" href="../birthdaylevy21/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="../birthdaylevy21/loading.css">
 	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
-	<link rel="stylesheet/less" href="../birthday-master/cake.less">
+	<link rel="stylesheet/less" href="../birthdaylevy21/cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
 
