--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../birthdaylevy21/stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="../birthdaylevy21/loading.css">
+	<link rel="stylesheet" type="text/css" href="../levy/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="../levy/loading.css">
 	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
-	<link rel="stylesheet/less" href="../birthdaylevy21/cake.less">
+	<link rel="stylesheet/less" href="../levy/cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
 </head>
 
